# rust-bevy-voxel

./: Cargo.toml  Chunk Spawning Architecture.md  README.md  config.toml
assets/: atlas.png~  grass.png-autosave.kra
src/: biome.rs  chunk.rs  chunk_manager.rs  chunk_mesh.rs  chunk_utils.rs  chunk_vertexes.rs  chunks.rs  main.rs  map.rs  point.rs  vert_gen.rs  voxel.rs
src/chunk_spawner/: chunk_spawner_plugin.rs  mod.rs  render_voxel_mesh.rs  spawn_chunks.rs  tasks.rs
src/flycamerafork/: mod.rs
src/flycamerafork/fly_camera/: cam2d.rs
src/systems/: chunk_spawner.rs  mod.rs  mouse_toggle.rs
