[package]
name = "rust-bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
rand = "*"
bevy_fly_camera = "*"
opensimplex_noise_rs = "0.3.0"
exec_time = "0.1.4"
futures-lite = "*"